--- a/index.html
+++ b/index.html
@@ -39,32 +39,32 @@
     <section class="slide slide2" id="Menu">
         <div class="menu-grid">
             <div class="menu-item"> 
-                <img src="/media/menu/katsu.png" alt="Chicken Katsu + Nasi">
+                <img src="media/menu/katsu.png" alt="Chicken Katsu + Nasi">
                 <p>Chicken Katsu + Nasi</p>
                 <button>Rp.13.000</button>
             </div>
             <div class="menu-item">
-                <img src="/media/menu/nasigoreng.png" alt="Nasi Goreng Teyoy Ceplok">
+                <img src="media/menu/nasigoreng.png" alt="Nasi Goreng Teyoy Ceplok">
                 <p>Nasi Goreng Teyoy Ceplok</p>
                 <button>Rp.13.000</button>
             </div>
             <div class="menu-item">
-                <img src="/media/menu/seblak.png" alt="Seblak">
+                <img src="media/menu/seblak.png" alt="Seblak">
                 <p>Seblak</p>
                 <button>Rp.10.000</button>
             </div>
             <div class="menu-item">
-                <img src="/media/menu/telor.png" alt="Telor Gimbal + Nasi">
+                <img src="media/menu/telor.png" alt="Telor Gimbal + Nasi">
                 <p>Telor Gimbal + Nasi</p>
                 <button>Rp.13.000</button>
             </div>
             <div class="menu-item">
-                <img src="/media/menu/geprek.png" alt="Ayam Geprek + Nasi">
+                <img src="media/menu/geprek.png" alt="Ayam Geprek + Nasi">
                 <p>Ayam Geprek + Nasi</p>
                 <button>Rp.15.000</button>
             </div>
             <div class="menu-item">
-                <img src="/media/menu/miekuah.png" alt="Indomie">
+                <img src="media/menu/miekuah.png" alt="Indomie">
                 <p>Indomie</p>
                 <button>Rp.8.000</button>
             </div>
